--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -8,3 +8,46 @@ ul,li
   list-style: none
   margin: 0
   padding: 0
+
+a,
+a:active
+  color: inherit
+
+.main-nav
+  position: fixed
+  width: 20%
+  min-width: 200px
+  vertical-align: top
+  color: #ffffff
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 100%);
+  padding: 24px
+  height: 100vh
+  box-sizing: border-box
+  overflow-y: scroll
+
+.main-nav__item
+  margin-bottom: 8px
+
+.main-nav__link
+  text-transform: uppercase
+  padding: 10px
+
+.main-nav__sub-link
+  padding: 6px
+
+.main-nav__sub-list
+  padding-left: 20px
+
+.content-block
+  width: 80%
+  padding: 24px
+  box-sizing: border-box
+  margin-left: 20%
+  +respond-to(1023px)
+    width: calc(100% - 200px)
+    margin-left: 200px
+
+.main-header
+  font-size: 42px
+  margin-bottom: 24px
+  text-align: center
